# calculs_geometriques

./: README.md
code/: CMakeLists.txt  main.cpp  run.bat
code/include/: SegmentDeCercle.h  cercle.h  ellipse.h  point.h  polygone.h  secteurDeCercle.h
code/src/: SecteurDeCercle.cpp  SegmentDeCercle.cpp  cercle.cpp  ellipse.cpp  point.cpp  polygone.cpp
documentation/backlogs/: spe_fonctionnelles1.md  sprints_backlog.md
documentation/cahier_des_charges/: Backlog 2.md  Sprint 1.md  version1.md
documentation/melees/: melee1.md  melee2.md  melee3.md  melee4.md  melee5.md  melees_resume.md
documentation/restrospections/: restropection1.md  restropection2.md  restropection3.md  restropection4.md  restropection5.md  retrospection_resume.md
documentation/revus/: a_faire.md  a_faire1.md  revu1.md  revu2.md  revu3.md  revu4.md  revu5.md  revus_resume.md
documentation/taches_objectif/: spe_fonctionnelles1.md
